# python-project-50-oop-edition

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci-check.yml
gendiff_package/: __init__.py  cli.py  formatter.py  gendiff.py  parcer.py  tree.py
gendiff_package/formatters/: __init__.py  formaters_cls.py  json.py  main_formatters.py  plain.py  stylish.py
gendiff_package/scripts/: gendiff.py
gendiff_package/tests/: conftest.py
gendiff_package/tests/fixtures/: expec_ans_flat_json.txt  json  stylish.py
gendiff_package/tests/test_cases/: test_json.py  test_plain.py  test_stylish.py  test_stylish_plain.py
